asfdemux: convert invalid 0 payload TS into GST_CLOCK_TIME_NONE

... so it does not get used as first (valid) payload ts, whereas
the first real valid payload ts may be considerably larger.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=679838